--- a/lecture11-CN.ipynb
+++ b/lecture11-CN.ipynb
@@ -62,34 +62,33 @@
    "source": [
     "### 过度识别\n",
     "\n",
-    "当 $L>K$ ，模型过度识别（over identification）。根据正交条件依然能够得到：\n",
+    "当 $L>K$ ，模型过度识别(over identification)。根据正交条件依然能够得到：\n",
     "\n",
     "$$\n",
     "\\Sigma\\beta_{0}=\\mathbb{E}\\left[z_{i}y_{i}\\right],\n",
     "$$(eq:moment2)\n",
     "\n",
-    "但是由于 $\\Sigma$ 不是一个方阵，因此不能像 {eq}`eqn:just_beta` 一样写出 $\\beta_{0}$ 。\n",
-    "\n",
-    "为了更直接地表达 $\\beta_{0}$ ，我们可以定义一个目标函数：\n",
+    "但由于 $\\Sigma$ 不是一个方阵，因此不能像 {eq}`eqn:just_beta` 一样直接对 $\\Sigma$ 求逆来写出 $\\beta_{0}$ 。\n",
+    "为了找到 $\\beta$ 的封闭形式，我们可以定义目标函数：\n",
     "\n",
     "$$\n",
     "Q\\left(\\beta\\right)=\\mathbb{E}\\left[z_{i}\\left(y_{i}-x_{i}\\beta\\right)\\right]'W\\mathbb{E}\\left[z_{i}\\left(y_{i}-x_{i}\\beta\\right)\\right]\n",
     "$$\n",
     "\n",
-    "其中 $W$ 是一个 $L\\times L$ 的非随机正定对称矩阵（我们将在后面讨论如何选择 $w$）。由于它是二次型，所有的 $\\beta$ 都满足 $Q\\left(\\beta\\right)\\geq 0$ 。**识别** 意味着 $Q\\left(\\beta\\right)=0$，该等式当且仅当 $\\beta=\\beta_{0}$ 成立。从而我们可以得到结论：\n",
+    "其中 $W$ 是一个 $L\\times L$ 的非随机正定对称矩阵（我们将在后面讨论如何选择 $W$）。由于它是二次型，所有的 $\\beta$ 都满足 $Q\\left(\\beta\\right)\\geq 0$ 。**识别** 意味着 $Q\\left(\\beta\\right)=0$，该等式当且仅当 $\\beta=\\beta_{0}$ 成立。从而我们可以得到结论：\n",
     "\n",
     "$$\n",
     "\\beta_{0}=\\arg\\min_{\\beta}Q\\left(\\beta\\right)\n",
     "$$\n",
     "\n",
     "是唯一的极小值。\n",
-    "因为 $Q\\left(\\beta\\right)$ 是一个 $\\beta$ 的光滑函数， $\\beta_{0}$ 这个极小值可以用一阶条件来求得：\n",
+    "因为 $Q\\left(\\beta\\right)$ 是一个 $\\beta$ 的光滑函数， 其极小值可以用一阶条件来求得：\n",
     "\n",
     "$$\n",
     "0_{K}=\\frac{\\partial}{\\partial\\beta}Q\\left(\\beta_{0}\\right)=-2\\Sigma'W\\mathbb{E}\\left[z_{i}\\left(y_{i}-x_{i}\\beta_{0}\\right)\\right].\n",
     "$$\n",
     "\n",
-    "整理上方的等式可以得到：\n",
+    "整理上方的等式得到：\n",
     "\n",
     "$$\n",
     "\\Sigma'W\\Sigma\\beta_{0}=\\Sigma'W\\mathbb{E}\\left[z_{i}y_{i}\\right].\n",
@@ -101,7 +100,7 @@
     "\\beta_{0}=\\left(\\Sigma'W\\Sigma\\right)^{-1}\\Sigma'W\\mathbb{E}\\left[z_{i}y_{i}\\right].\n",
     "$$(eq:over_beta)\n",
     "\n",
-    "由于模型中矩 ($L$)的数量比未知参数 ($K$) 更多,我们称之为：**广义矩估计** 。\n"
+    "由于模型中矩 ($L$)的数量比未知参数 ($K$) 更多，我们称之为**广义矩估计** 。\n"
    ]
   },
   {
@@ -185,9 +184,11 @@
     "现在我们来验证 $\\widehat{\\beta}$ 的渐近性质。以下是一系列的假设：\n",
     "\n",
     "\n",
-    "```{admonition} Assumption 11.1（A.1）$Z'X/n\\stackrel{\\mathrm{p}}{\\to}\\Sigma$ 和 $Z'\\epsilon/n\\stackrel{\\mathrm{p}}{\\to}0_{L}$\n",
-    "A.1 假设我们可以使用大数定律，以至于 $Z'X/n$ 和 $Z'\\epsilon/n$ 依概率收敛于总体的真实值。\n",
-    "```\n"
+    "```{admonition} 假设 11.1（A.1）\n",
+    "$Z'X/n\\stackrel{\\mathrm{p}}{\\to}\\Sigma$ 和 $Z'\\epsilon/n\\stackrel{\\mathrm{p}}{\\to}0_{L}$\n",
+    "```\n",
+    "\n",
+    "A.1 假设我们可以使用大数定律，以至于 $Z'X/n$ 和 $Z'\\epsilon/n$ 依概率收敛于总体的真实值。\n"
    ]
   },
   {
@@ -195,7 +196,11 @@
    "id": "60bf7623",
    "metadata": {},
    "source": [
-    "```{admonition} Theorem 11.1 基于 A.1 的假设, $\\widehat{\\beta}$ 是相合的。\n",
+    "```{admonition} Theorem 11.1 \n",
+    "\n",
+    "基于假设 A.1 , $\\widehat{\\beta}$ 是相合的。\n",
+    "```\n",
+    "\n",
     "**证明** ：这里的证明步骤于证明OLS估计量的相合性类似：\n",
     "\n",
     "$$\n",
@@ -204,7 +209,6 @@
     " & =\\beta_{0}+\\left(\\frac{X'Z}{n}W\\frac{Z'X}{n}\\right)^{-1}\\frac{X'Z}{n}W\\frac{Z'\\epsilon}{n}\\\\\n",
     " & \\stackrel{\\mathrm{p}}{\\to}\\beta_{0}+\\left(\\Sigma'W\\Sigma\\right)^{-1}\\Sigma'W0=\\beta_{0}.\\end{aligned}\n",
     "$$\n",
-    "```\n",
     "\n"
    ]
   },
@@ -223,6 +227,8 @@
     "\n",
     "其中 $\\Omega=\\mathbb{E}\\left[z_{i}z_{i}'\\epsilon_{i}^{2}\\right].$\n",
     "```\n",
+    "\n",
+    "\n",
     "```{admonition} Theorem 11.2 (渐进正态性）\n",
     "基于假设 A.1 和 A.2 有：\n",
     "\n",
@@ -230,7 +236,16 @@
     "\\sqrt{n}\\left(\\widehat{\\beta}-\\beta_{0}\\right)\\stackrel{d}{\\to}N\\left(0_{K},\\left(\\Sigma'W\\Sigma\\right)^{-1}\\Sigma'W\\Omega W\\Sigma\\left(\\Sigma'W\\Sigma\\right)^{-1}\\right).\\label{eq:normality}.\n",
     "$$\n",
     "\n",
-    "**证明** ：用规模 $\\sqrt{n}$ 乘上 $\\widehat{\\beta}-\\beta_{0}$ ,可以得到：\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13632596",
+   "metadata": {},
+   "source": [
+    "\n",
+    "**证明** ：在 $(\\widehat{\\beta}-\\beta_{0})$ 之前乘上 $\\sqrt{n}$ 可以得到\n",
     "\n",
     "$$\n",
     "\\sqrt{n}\\left(\\widehat{\\beta}-\\beta_{0}\\right)=\\left(\\frac{X'Z}{n}W\\frac{Z'X}{n}\\right)^{-1}\\frac{X'Z}{n}W\\frac{Z'\\epsilon}{\\sqrt{n}}=\\left(\\frac{X'Z}{n}W\\frac{Z'X}{n}\\right)^{-1}\\frac{X'Z}{n}W\\frac{1}{\\sqrt{n}}\\sum_{i=1}^{n}z_{i}'\\epsilon_{i}.\n",
@@ -257,11 +272,19 @@
     "### 有效GMM\n",
     "\n",
     "从 {eq}`eq:as_normal` 中我们可以清楚地知道，GMM估计量的渐近方差依赖于 $W$ 的选择。 哪一个 $W$ 会使得渐近方差尽可能小呢?\n",
-    "答案是 $W=\\Omega^{-1}$，带入它我们能够得到如下有效渐近方差：\n",
+    "答案是 $W=\\Omega^{-1}$。将其代入渐近方差的公式，它我们能够得到如下有效渐近方差\n",
     "\n",
     "$$\n",
     "\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}\\Sigma'\\Omega^{-1}\\Omega\\Omega^{-1}\\Sigma\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}=\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}.\n",
     "$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bc9ed3c",
+   "metadata": {},
+   "source": [
     "\n",
     "```{admonition} Proposition 11.1 \n",
     "对于任意的正定对称矩阵 $W$ ，它与渐近方差之间的差：\n",
@@ -271,6 +294,15 @@
     "$$\n",
     "\n",
     "是半正定矩阵。\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2699848c",
+   "metadata": {},
+   "source": [
     "**证明** ：为了简化符号，记\n",
     "$A:=W\\Sigma\\left(\\Sigma'W\\Sigma\\right)^{-1}$ 以及\n",
     "$B:=\\Omega^{-1}\\Sigma\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}$ ，然后两个矩阵的差值变为：\n",
@@ -300,8 +332,7 @@
     "\\left(\\Sigma'W\\Sigma\\right)^{-1}\\Sigma'W\\Omega W\\Sigma\\left(\\Sigma'W\\Sigma\\right)^{-1}-\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}=\\left(A-B\\right)'\\Omega\\left(A-B\\right)\n",
     "$$\n",
     "\n",
-    "为半正定矩阵。\n",
-    "```"
+    "为半正定矩阵。"
    ]
   },
   {
@@ -351,7 +382,7 @@
     "\\Omega=\\mathbb{E}\\left[z_{i}z_{i}'\\epsilon_{i}^{2}\\right]=\\mathbb{E}\\left[z_{i}z_{i}'\\mathbb{E}\\left[\\epsilon_{i}^{2}|z_{i}\\right]\\right]=\\sigma^{2}\\mathbb{E}\\left[z_{i}z_{i}'\\right].\n",
     "$$\n",
     "\n",
-    "在两阶段 GMM 中的第一步中，我们可以用 $\\widehat{\\sigma}^{2}=\\frac{1}{n}\\sum_{i=1}^{n}\\widehat{\\epsilon}_{i}^{2}$ 估计方差的误差项，用$\\widehat{\\Omega}=\\widehat{\\sigma}^{2}\\frac{1}{n}\\sum_{i=1}^{n}z_{i}z_{i}'=\\widehat{\\sigma}^{2}Z'Z/n$ 估计方差矩阵。我们把 $W=\\widehat{\\Omega}^{-1}$ 带入到 GMM 估计量中：\n",
+    "在两阶段 GMM 中的第一步中，我们可以用 $\\widehat{\\sigma}^{2}=\\frac{1}{n}\\sum_{i=1}^{n}\\widehat{\\epsilon}_{i}^{2}$ 估计方差的误差项，用$\\widehat{\\Omega}=\\widehat{\\sigma}^{2}\\frac{1}{n}\\sum_{i=1}^{n}z_{i}z_{i}'=\\widehat{\\sigma}^{2}Z'Z/n$ 估计方差矩阵。我们把 $W=\\widehat{\\Omega}^{-1}$ 代入到 GMM 估计量中：\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -360,10 +391,12 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "当 $L>K$ 时，这个表达式与 2SLS 表达式完全一致。因此, 两阶段最小二乘可以被视为GMM带有伴随矩阵 $\\left(Z'Z/n\\right)^{-1}$ 的特例。在条件同方差假设下, 2SLS 是有效估计量。然而，尽管 2SLS 十分流行，但在异方差的情况下它不是有效的。\n",
+    "当 $L>K$ 时，这个表达式与 2SLS 表达式完全一致。因此, 两阶段最小二乘可以被视为GMM带有伴随矩阵 $\\left(Z'Z/n\\right)^{-1}$ 的特例。在条件同方差假设下, 2SLS 是有效估计量。然而，尽管 2SLS 十分流行，但在异方差的情况下它不是有效估计量。\n",
+    "\n",
     "```{admonition} Remark 11.3\n",
-    "2SLS 得名于它通过两步得到回归结果: 首先用所有工具变量 $Z$ 对 $X$ 进行回归, 之后用对应的值和包含的外生变量对 $y$ 进行回归。然而，通过上述等式,2SLS实际上可以一步得到,因为它是GMM的特例。\n",
+    "2SLS 得名于它通过两步得到回归结果: 首先用所有工具变量 $Z$ 对 $X$ 进行回归，之后用对应的值和包含的外生变量对 $y$ 进行回归。然而，通过上述等式，2SLS实际上可以一步得到，因为它是GMM的特例。\n",
     "```\n",
+    "\n",
     "```{admonition} Remark 11.4\n",
     "如果有效估计量不难找，计量经济学者会更倾向于使用有效估计量。使用有效估计量的好处不仅仅在于系数估计更加精确。许多专门的检验，比如之后我们将介绍的 $J$-统计量，将依赖于有效估计量在原假设中得到 $\\chi^{2}$ 分布。否则它们的渐进分布将是不标准的，分布的临界值将只能用蒙特卡罗方法（Monte Carlo simulations）才能找到。\n",
     "```"
